--- a/views/app.html
+++ b/views/app.html
@@ -8,6 +8,6 @@
 <div id = "test"></div>
 <div id="pdf-content"></div>
 </body>
-
+<script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/main.js"></script>
 </html>
