Added basic stylesheet

--- a/views/app.html
+++ b/views/app.html
@@ -2,11 +2,13 @@
 
 <head>
 <title></title>
-
+<link rel="stylesheet" type="text/css" href="../style/main.css">
 </head>
 <body>
 <div id = "test"></div>
-<div id="pdf-content"></div>
+<div id="pdf-content">
+    Loading the document...
+</div>
 </body>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/main.js"></script>
