--- a/views/app.html
+++ b/views/app.html
@@ -39,7 +39,19 @@
     </div>
     </div>
     <div id="pdf-content">
-        Loading the document...
+        <div id="pdf-content-message">
+            <div>
+                Loading the document...
+            </div>
+            <div class='loader'>
+                <div class="bg"></div>
+                <div class='circle'></div>
+                <div class='circle'></div>
+                <div class='circle'></div>
+                <div class='circle'></div>
+                <div class='circle'></div>
+              </div>
+        </div>
     </div>
 </body>
 <script src="../scripts/jquery.min.js"></script>
