--- a/views/app.html
+++ b/views/app.html
@@ -2,14 +2,14 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../style/main.css">
+    <link rel="stylesheet" type="text/css" href="../style/main.css" />
 </head>
 
 <body>
     <div id="toolbar">
         <svg version="1.1" id="dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" width="20px" height="20px" viewBox="0 0 276.167 276.167"
-            style="enable-background:new 0 0 276.167 276.167;" xml:space="preserve" fill="#FFFFFF">
+            style="enable-background: new 0 0 276.167 276.167;" xml:space="preserve" fill="#FFFFFF">
             <g>
                 <path d="M33.144,2.471C15.336,2.471,0.85,16.958,0.85,34.765s14.48,32.293,32.294,32.293s32.294-14.486,32.294-32.293
 			S50.951,2.471,33.144,2.471z" />
@@ -35,22 +35,43 @@
         <div class="vertical-line"></div>
         <div id="file-name"></div>
         <div id="edit-btn-div">
-        <a id="edit-btn" href="">Edit</a>
-    </div>
+            <a id="edit-btn" href="">Edit</a>
+        </div>
+        <div id="buttons">
+            <div class="toolbar-button" id="save">
+                <svg width="20px" height="20px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                    style="enable-background: new 0 0 512 512;" xml:space="preserve" fill="white">
+                    <g>
+                        <g>
+                            <path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64
+                       c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472
+                       c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z" />
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path
+                                d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z" />
+                        </g>
+                    </g>
+                </svg>
+            </div>
+        </div>
     </div>
     <div id="pdf-content">
         <div id="pdf-content-message">
             <div>
                 Loading the document...
             </div>
-            <div class='loader'>
+            <div class="loader">
                 <div class="bg"></div>
-                <div class='circle'></div>
-                <div class='circle'></div>
-                <div class='circle'></div>
-                <div class='circle'></div>
-                <div class='circle'></div>
-              </div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
         </div>
     </div>
 </body>
