Icon and other minor fixes

--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    Office on Web
-  </body>
+<html xml:lang="en" lang="en">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  <title>Microsoft Office documents in Microsoft Edge</title>
+  <link rel="stylesheet" type="text/css" href="../style/mainPopup.css" />
+</head>
+
+<body>
+  <main>
+    <div id="main">
+      <h4>Microsoft Office documents in Microsoft Edge</h4>
+      <div id="panel">
+        <span><img src="../assets/icon.png"></span>
+        <span>Use this to extension to open or create Microsoft Office documents from anywhere in
+          the web inside Microsoft Edge.</span>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
