--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -12,11 +12,13 @@
   <main>
     <div id="main">
       <h4>Microsoft Office documents in Microsoft Edge</h4>
-      <!--<div id="panel">
+      <div id="panel">
         <span><img src="../assets/icon.png"></span>
         <span>Use this to extension to open or create Microsoft Office documents from anywhere in
           the web inside Microsoft Edge.</span>
-      </div>-->
+      </div>
+	  </br>
+	  <div>
 	  <a href="https://www.office.com/launch/word" target="_blank">
 		<i class="fa fa-plus" style="color:#2C579A;"></i>
 		<div class="icons"><img src="../assets/wordIcon.png"></div>
@@ -35,6 +37,7 @@
 		<div class="title">Presentation</div>
 		<div class="subtitle">PowerPoint</div>
 	  </a>
+	  </div>
     </div>
   </main>
 </body>
