--- a/views/app.html
+++ b/views/app.html
@@ -2,62 +2,18 @@
 
 <head>
     <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css" />
+    <link rel="shortcut icon" href="http://prateekchandan.in/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="http://prateekchandan.in/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
-    <div id="toolbar">
-        <svg version="1.1" id="dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px" y="0px" width="20px" height="20px" viewBox="0 0 276.167 276.167"
-            style="enable-background: new 0 0 276.167 276.167;" xml:space="preserve" fill="#FFFFFF">
-            <g>
-                <path d="M33.144,2.471C15.336,2.471,0.85,16.958,0.85,34.765s14.48,32.293,32.294,32.293s32.294-14.486,32.294-32.293
-			S50.951,2.471,33.144,2.471z" />
-                <path d="M137.663,2.471c-17.807,0-32.294,14.487-32.294,32.294s14.487,32.293,32.294,32.293c17.808,0,32.297-14.486,32.297-32.293
-			S155.477,2.471,137.663,2.471z" />
-                <path d="M243.873,67.059c17.804,0,32.294-14.486,32.294-32.293S261.689,2.471,243.873,2.471s-32.294,14.487-32.294,32.294
-			S226.068,67.059,243.873,67.059z" />
-                <path d="M32.3,170.539c17.807,0,32.297-14.483,32.297-32.293c0-17.811-14.49-32.297-32.297-32.297S0,120.436,0,138.246
-			C0,156.056,14.493,170.539,32.3,170.539z" />
-                <path d="M136.819,170.539c17.804,0,32.294-14.483,32.294-32.293c0-17.811-14.478-32.297-32.294-32.297
-			c-17.813,0-32.294,14.486-32.294,32.297C104.525,156.056,119.012,170.539,136.819,170.539z" />
-                <path d="M243.038,170.539c17.811,0,32.294-14.483,32.294-32.293c0-17.811-14.483-32.297-32.294-32.297
-			s-32.306,14.486-32.306,32.297C210.732,156.056,225.222,170.539,243.038,170.539z" />
-                <path d="M33.039,209.108c-17.807,0-32.3,14.483-32.3,32.294c0,17.804,14.493,32.293,32.3,32.293s32.293-14.482,32.293-32.293
-			S50.846,209.108,33.039,209.108z" />
-                <path d="M137.564,209.108c-17.808,0-32.3,14.483-32.3,32.294c0,17.804,14.487,32.293,32.3,32.293
-			c17.804,0,32.293-14.482,32.293-32.293S155.368,209.108,137.564,209.108z" />
-                <path d="M243.771,209.108c-17.804,0-32.294,14.483-32.294,32.294c0,17.804,14.49,32.293,32.294,32.293
-			c17.811,0,32.294-14.482,32.294-32.293S261.575,209.108,243.771,209.108z" />
-            </g>
-        </svg>
-        <div id="app-title"></div>
-        <div class="vertical-line"></div>
-        <div id="file-name"></div>
-        <div id="edit-btn-div">
-            <a id="edit-btn" href="">Edit</a>
-        </div>
-        <div id="buttons">
-            <div class="toolbar-button" id="save">
-                <svg width="20px" height="20px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                    style="enable-background: new 0 0 512 512;" xml:space="preserve" fill="white">
-                    <g>
-                        <g>
-                            <path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64
-                       c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472
-                       c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z" />
-                        </g>
-                    </g>
-                    <g>
-                        <g>
-                            <path
-                                d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z" />
-                        </g>
-                    </g>
-                </svg>
-            </div>
-        </div>
+    <div id="buttons">
+        <a id="edit-btn" href="">
+            <i class="fa fa-edit"></i>
+            Edit Online
+        </a>
     </div>
     <div id="pdf-content">
         <div id="pdf-content-message">
