--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <title>Microsoft Office documents in Microsoft Edge</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="../style/mainPopup.css" />
 </head>
 
@@ -17,28 +17,29 @@
         <span>Use this to extension to open or create Microsoft Office documents from anywhere in
           the web inside Microsoft Edge.</span>
       </div>
-	  </br>
-	  <div>
-	  <a href="https://www.office.com/launch/word" target="_blank">
-		<i class="fa fa-plus" style="color:#2C579A;"></i>
-		<div class="icons"><img src="../assets/wordIcon.png"></div>
-		<div class="title">Document</div>
-		<div class="subtitle">Word</div>
-	  </a>
-	  <a href="https://www.office.com/launch/excel" target="_blank">
-		<i class="fa fa-plus" style="color:#207346;"></i>
-		<div class="icons"><img src="../assets/excelIcon.png"></div>
-		<div class="title">Spreadsheet</div>
-		<div class="subtitle">Excel</div>
-	  </a>
-	  <a href="https://www.office.com/launch/powerpoint" target="_blank">
-		<i class="fa fa-plus" style="color:#B8472A;"></i>
-		<div class="icons"><img src="../assets/pptIcon.png"></div>
-		<div class="title">Presentation</div>
-		<div class="subtitle">PowerPoint</div>
-	  </a>
-	  </div>
+      </br>
+      <div>
+        <a href="https://www.office.com/launch/word" target="_blank">
+          <i class="fa fa-plus" style="color:#2C579A;"></i>
+          <div class="icons"><img src="../assets/wordIcon.png"></div>
+          <div class="title">Document</div>
+          <div class="subtitle">Word</div>
+        </a>
+        <a href="https://www.office.com/launch/excel" target="_blank">
+          <i class="fa fa-plus" style="color:#207346;"></i>
+          <div class="icons"><img src="../assets/excelIcon.png"></div>
+          <div class="title">Spreadsheet</div>
+          <div class="subtitle">Excel</div>
+        </a>
+        <a href="https://www.office.com/launch/powerpoint" target="_blank">
+          <i class="fa fa-plus" style="color:#B8472A;"></i>
+          <div class="icons"><img src="../assets/pptIcon.png"></div>
+          <div class="title">Presentation</div>
+          <div class="subtitle">PowerPoint</div>
+        </a>
+      </div>
     </div>
   </main>
 </body>
+
 </html>
