--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -14,7 +14,7 @@
       <h4>Microsoft Office documents in Microsoft Edge</h4>
       <div id="panel">
         <span><img src="../assets/icon.png"></span>
-        <span>Use this to extension to open or create Microsoft Office documents from anywhere in
+        <span>Use this extension to open or create Microsoft Office documents from anywhere in
           the web inside Microsoft Edge.</span>
       </div>
       </br>
