--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -19,19 +19,19 @@
       </div>
       </br>
       <div>
-        <a href="https://www.office.com/launch/word" target="_blank">
+        <a class="box" href="https://www.office.com/launch/word" target="_blank">
           <i class="fa fa-plus" style="color:#2C579A;"></i>
           <div class="icons"><img src="../assets/wordIcon.png"></div>
           <div class="title">Document</div>
           <div class="subtitle">Word</div>
         </a>
-        <a href="https://www.office.com/launch/excel" target="_blank">
+        <a class="box" href="https://www.office.com/launch/excel" target="_blank">
           <i class="fa fa-plus" style="color:#207346;"></i>
           <div class="icons"><img src="../assets/excelIcon.png"></div>
           <div class="title">Spreadsheet</div>
           <div class="subtitle">Excel</div>
         </a>
-        <a href="https://www.office.com/launch/powerpoint" target="_blank">
+        <a class="box" href="https://www.office.com/launch/powerpoint" target="_blank">
           <i class="fa fa-plus" style="color:#B8472A;"></i>
           <div class="icons"><img src="../assets/pptIcon.png"></div>
           <div class="title">Presentation</div>
