--- a/views/app.html
+++ b/views/app.html
@@ -11,7 +11,7 @@
 <body>
     <div id="buttons">
         <a id="edit-btn" href="">
-            <i class="fa fa-edit"></i>
+            <i id="edit-icon" class="fa fa-edit"></i>
             Edit Online
         </a>
     </div>
