--- a/views/mainPopup.html
+++ b/views/mainPopup.html
@@ -11,29 +11,28 @@
 <body>
   <main>
     <div id="main">
-      <h4>Microsoft Office documents in Microsoft Edge</h4>
+      <h4 id="popup-title">Microsoft Office documents in Edge</h4>
       <div id="panel">
-        <span><img src="../assets/icon.png"></span>
-        <span>Use this extension to open or create Microsoft Office documents from anywhere in
+        <span><img id="office-icon-main" src="../assets/icon.png"></span>
+        <span>Use this to open or create Microsoft Office documents from anywhere in
           the web inside Microsoft Edge.</span>
       </div>
-      </br>
       <div>
         <a class="box" href="https://www.office.com/launch/word" target="_blank">
           <i class="fa fa-plus" style="color:#2C579A;"></i>
-          <div class="icons"><img src="../assets/wordIcon.png"></div>
+          <div class="icons"><img class="office-icon" src="../assets/wordIcon.png"></div>
           <div class="title">Document</div>
           <div class="subtitle">Word</div>
         </a>
         <a class="box" href="https://www.office.com/launch/excel" target="_blank">
           <i class="fa fa-plus" style="color:#207346;"></i>
-          <div class="icons"><img src="../assets/excelIcon.png"></div>
+          <div class="icons"><img class="office-icon" src="../assets/excelIcon.png"></div>
           <div class="title">Spreadsheet</div>
           <div class="subtitle">Excel</div>
         </a>
         <a class="box" href="https://www.office.com/launch/powerpoint" target="_blank">
           <i class="fa fa-plus" style="color:#B8472A;"></i>
-          <div class="icons"><img src="../assets/pptIcon.png"></div>
+          <div class="icons"><img class="office-icon" src="../assets/pptIcon.png"></div>
           <div class="title">Presentation</div>
           <div class="subtitle">PowerPoint</div>
         </a>
