--- a/style/main.css
+++ b/style/main.css
@@ -50,6 +50,7 @@ body {
 #edit-btn {
     background-color: rgba(200, 200, 200, 0.1);
     border-radius: 5px;
+    font-family: SegoeUI,Helvetica,Arial,sans-serif;
 }
 
 #edit-btn:hover,
@@ -62,10 +63,16 @@ body {
 #edit-btn:focus {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     display: block;
     font-weight: 300;
     padding: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#edit-icon {
+    margin-right: 3px;
 }
 
 #pdf-content-message {
@@ -80,7 +87,7 @@ body {
     top: 0%;
     right: 0%;
     padding-right: 10px;
-    transform: translate(-50%, 0%);
+    transform: translate(0%, 0%);
     margin-top: 6px;
 }
 
