Changed text: Edit Online --> Edit

--- a/views/app.html
+++ b/views/app.html
@@ -12,7 +12,7 @@
     <div id="buttons">
         <a id="edit-btn" href="">
             <i id="edit-icon" class="fa fa-edit"></i>
-            Edit Online
+            Edit
         </a>
     </div>
     <div id="pdf-content">
