--- a/views/app.html
+++ b/views/app.html
@@ -18,6 +18,8 @@
     <div id="pdf-content">
     </div>
 </body>
+<script type="text/javascript" src="../scripts/vendor/graph-js-sdk.js"></script>
+<script type="text/javascript" src="../scripts/vendor/msal.min.js"></script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/main.js"></script>
 
